--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
     "source.organizeImports.biome": "always",
     "quickFix.biome": "always",
     "source.fixAll.biome": "always"
-  }
+  },
+  "cSpell.words": ["nums"]
 }
