--- a/pg1/package.json
+++ b/pg1/package.json
@@ -2,12 +2,13 @@
   "scripts": {
     "test": "vitest",
     "tsc": "tsc --noEmit --diagnostics",
+    "typecheck": "tsc --noEmit --skipLibCheck",
     "tsgo": "tsgo --noEmit --diagnostics"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.15.21",
-    "typescript": "5.8.0-dev.20241106",
+    "typescript": "5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.4"
   },
