--- a/pg3/package.json
+++ b/pg3/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "globals": "^16.2.0",
-    "typescript": "~5.8.3",
+    "typescript": "5.8.0-dev.20241106",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
   }
